# hand-gesture-calculator

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
handcalc/: __init__.py  app.py  buttons.py  calculator.py  cli.py  evaluator.py  gestures.py  layout.py  model_assets.py  render.py  sizing.py  vision.py
tests/: test_buttons_and_layout.py  test_calculator.py  test_cli.py  test_evaluator.py  test_gestures.py  test_model_assets.py  test_sizing.py
