[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handcalcgesture"
version = "1.0.0"
description = "Local OpenCV and MediaPipe hand-gesture calculator demo"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Yu7-creator" },
]
dependencies = [
  "opencv-contrib-python>=4.13",
  "mediapipe>=0.10.35",
  "numpy>=1.26",
]

[project.scripts]
handcalc = "handcalc.cli:main"

[tool.setuptools]
packages = ["handcalc"]

[tool.unittest]
start-dir = "tests"
